# MiniPythonIDE

./: .gitignore  CMakeLists.txt  DEBUGGER_GUIDE.md  README.md  main.cpp  test.py  test_debug_variables.py  test_module_display.py  test_nested_module.py  test_object_display.py  test_segmented_display.py
.github/workflows/: build-cpp.yml
fonts/: Cousine-Regular.cpp  RobotoMono-Medium.cpp  RobotoMono-VariableFont_wght.cpp
src/: debugger.cpp  debugger.h  editor.cpp  editor.h  main.cpp
src/exe/: main.c
src/ide/: dap_client.cpp  dap_client.h  debugger.cpp  debugger.h  json_tree_viewer.cpp  json_tree_viewer.h  main.cpp  pocketpy_debugger_internal.h
